--- a/app/src/main/res/layout/activity_about_me.xml
+++ b/app/src/main/res/layout/activity_about_me.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
-    tools:context="crypto.tracer.app.about.AboutMeActivity">
+    tools:context="com.followyourcoins.app.about.AboutMeActivity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -26,7 +26,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_top"
                 android:alpha="1"
-                tools:text="Crypto Tracer" />
+                tools:text="Follow Your Coins" />
 
             <TextView
                 android:id="@+id/tvBy"
