--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
-    tools:context="crypto.tracer.app.BaseActivity">
+    tools:context="com.followyourcoins.app.BaseActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
