--- a/app/src/main/res/layout/activity_coin_detail.xml
+++ b/app/src/main/res/layout/activity_coin_detail.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
-    tools:context="crypto.tracer.app.CoinDetailsActivity">
+    tools:context="com.followyourcoins.app.CoinDetailsActivity">
 
     <TextView
         style="@style/HeaderText1"
