--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
     android:gravity="center"
-    tools:context="crypto.tracer.app.home.HomeActivity">
+    tools:context="com.followyourcoins.app.home.HomeActivity">
 
     <LinearLayout
         android:id="@+id/llMyCoinHeader"
