--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
-    tools:context="crypto.tracer.app.SplashActivity">
+    tools:context="com.followyourcoins.app.SplashActivity">
 
     <ImageView
         android:id="@+id/ivLogo"
@@ -18,7 +18,7 @@
     <TextView
         android:id="@+id/tvAppName"
         style="@style/XXXNormalTextBold"
-        android:text="Crypto Tracer"
+        android:text="Follow Your Coins"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="200dp"
